refactor : jwt 수정